--- a/submission.ipynb
+++ b/submission.ipynb
@@ -17,18 +17,18 @@
     "\n",
     "class CFG():\n",
     "    def __init__(self):\n",
-    "        self.device = torch.device(\"cpu\")  # Csak CPU használata\n",
-    "        self.sample_rate = 32000          # Mintavételi frekvencia\n",
-    "        self.n_mels = 224                 # Mel sávok száma\n",
-    "        self.n_fft = 2048                 # FFT ablakhossz\n",
-    "        self.hop_length = 512             # FFT lépésköz\n",
-    "        self.max_length_s = 5             # Szeletek hossza másodpercben\n",
-    "        self.f_max = 16000                # Maximális frekvencia\n",
-    "        self.f_min = 20                   # Minimális frekvencia\n",
-    "        self.num_classes = 182            # Osztályok száma\n",
-    "        self.model_path = \"model.pth\"     # Modell mentett állapota\n",
-    "        self.data_path = \"data/unlabeled_soundscapes/\"  # Hangfájlok helye\n",
-    "        self.output_path = \"submission.csv\"  # Kimeneti fájl neve\n",
+    "        self.device = torch.device(\"cpu\")\n",
+    "        self.sample_rate = 32000\n",
+    "        self.n_mels = 224\n",
+    "        self.n_fft = 2048\n",
+    "        self.hop_length = 512\n",
+    "        self.max_length_s = 5\n",
+    "        self.f_max = 16000\n",
+    "        self.f_min = 20\n",
+    "        self.num_classes = 182\n",
+    "        self.model_path = \"model.pth\"\n",
+    "        self.data_path = \"data/unlabeled_soundscapes/\"\n",
+    "        self.output_path = \"submission.csv\"\n",
     "\n",
     "config = CFG()\n",
     "\n",
@@ -36,30 +36,22 @@
     "model.classifier[1] = nn.Linear(\n",
     "    model.classifier[1].in_features, config.num_classes\n",
     ")\n",
-    "# model.load_state_dict(torch.load(config.model_path, map_location=config.device))\n",
+    "model.load_state_dict(torch.load(config.model_path, map_location=config.device))\n",
     "model.eval()\n",
     "model.to(config.device)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fájlok listázása\n",
     "def list_audio_files(data_dir):\n",
-    "    \"\"\"\n",
-    "    Listázza az összes audiofájlt a megadott mappában.\n",
-    "    \"\"\"\n",
     "    filepaths = [os.path.join(data_dir, f) for f in os.listdir(data_dir) if f.endswith(\".ogg\")]\n",
     "    return pd.DataFrame({\"filepath\": filepaths})\n",
     "\n",
-    "# Audio szeletelése\n",
     "def process_audio(file_path):\n",
-    "    \"\"\"\n",
-    "    Betölti az audiofájlt és 5 másodperces szeletekre bontja.\n",
-    "    \"\"\"\n",
     "    audio, _ = lb.load(file_path, sr=config.sample_rate, mono=True)\n",
     "    chunk_size = config.sample_rate * config.max_length_s\n",
     "    chunks = [audio[i:i+chunk_size] for i in range(0, len(audio), chunk_size)]\n",
@@ -73,56 +65,52 @@
     "    )\n",
     "    mel_spec_db = lb.power_to_db(mel_spec, ref=np.max)\n",
     "    \n",
-    "    # Három csatornás bővítés\n",
-    "    mel_spec_3ch = np.repeat(mel_spec_db[np.newaxis, :, :], 3, axis=0)  # [3, height, width]\n",
-    "    return mel_spec_3ch\n"
+    "    mel_spec_3ch = np.repeat(mel_spec_db[np.newaxis, :, :], 3, axis=0)\n",
+    "    return mel_spec_3ch\n",
+    "\n",
+    "\n",
+    "def load_species_labels(metadata_path):\n",
+    "    data = pd.read_csv(metadata_path)\n",
+    "    labels = sorted(list(data['primary_label'].unique()))\n",
+    "    return labels\n",
+    "\n",
+    "LABELS = load_species_labels('data/train_metadata.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_predictions(chunks, model, config):\n",
     "    predictions = []\n",
+    "    sigmoid = nn.Sigmoid()\n",
     "    for chunk in chunks:\n",
     "        mel_spec = mel_spectrogram(chunk)\n",
-    "        \n",
-    "        # Átméretezés az EfficientNet bemeneti követelményeinek megfelelően\n",
-    "        mel_tensor = torch.tensor(mel_spec, dtype=torch.float32).unsqueeze(0).to(config.device)  # [1, 3, height, width]\n",
-    "        \n",
+    "        mel_tensor = torch.tensor(mel_spec, dtype=torch.float32).unsqueeze(0).to(config.device)\n",
     "        with torch.no_grad():\n",
-    "            pred = model(mel_tensor)\n",
+    "            pred = sigmoid(model(mel_tensor))\n",
     "            predictions.append(pred.cpu().numpy())\n",
     "    return predictions\n",
     "\n",
-    "# Eredmények mentése CSV-be\n",
     "def save_predictions_to_csv(filename, predictions):\n",
-    "    \"\"\"\n",
-    "    A predikciók mentése Kaggle submission formátumban.\n",
-    "    \"\"\"\n",
-    "    # Predikciók átalakítása [48, 182] alakú mátrixszá\n",
-    "    predictions = np.squeeze(np.array(predictions), axis=1)  # [48, 182]\n",
+    "    predictions = np.squeeze(np.array(predictions), axis=1)\n",
     "\n",
-    "    # Row ID generálása\n",
     "    row_ids = [f\"soundscape_{filename}_{(i+1)*config.max_length_s}\" for i in range(len(predictions))]\n",
     "\n",
-    "    # DataFrame létrehozása\n",
-    "    pred_df = pd.DataFrame(predictions, columns=[f\"species_{i+1}\" for i in range(config.num_classes)])\n",
+    "    pred_df = pd.DataFrame(predictions, columns=LABELS)\n",
     "    pred_df.insert(0, \"row_id\", row_ids)\n",
     "\n",
-    "    # CSV mentése\n",
     "    pred_df.to_csv(config.output_path, mode=\"a\", index=False, header=not os.path.exists(config.output_path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pipeline\n",
     "audio_df = list_audio_files(config.data_path)"
    ]
   },
@@ -136,13 +124,10 @@
     "    file_path = row[\"filepath\"]\n",
     "    filename = row[\"filepath\"].split(\"/\")[-1].replace(\".ogg\", \"\")\n",
     "\n",
-    "    # 1. Audio betöltése és szeletelése\n",
     "    chunks = process_audio(file_path)\n",
     "\n",
-    "    # 2. Mel-spektrogram és inferencia minden szeletre\n",
     "    predictions = generate_predictions(chunks, model, config)\n",
     "\n",
-    "    # 3. Eredmények mentése CSV-be\n",
     "    save_predictions_to_csv(filename, predictions)\n",
     "\n",
     "print(f\"Predictions saved to {config.output_path}\")"
@@ -151,7 +136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "depphw",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
